# fio-plot

./: .README.md.swp  .fio-plot.py.swp  .gitignore  CHANGELOG.md  Dockerfile  Fio-plot.sln  MANIFEST.in  README-BBEditPreviewTemp.md.html  README.md  Releasenotes.md  fio-plot.py  fioplot.code-workspace  host.list  pyproject.toml  requirements.txt  setup.py
HPDL380G8-H420i-Crucial-MX200/: randread-1-1.json  randread-1-32.json  randread-16-1.json  randread-16-2.json  randread-16-4.json  randread-2-2.json  randread-32-32.json  randread-32-4.json  randread-32-8.json  randread-4-16.json  randread-4-4.json  randread-4-8.json  randread-64-1.json  randread-64-16.json  randread-64-2.json  randread-64-32.json  randread-64-64.json  randread-64-8.json  randread-8-32.json  randread-8-4.json  randread-8-64.json  randwrite-1-1.json  randwrite-1-16.json  randwrite-1-32.json  randwrite-1-4.json  randwrite-1-64.json  randwrite-16-1.json  randwrite-16-16.json  randwrite-16-32.json  randwrite-16-8.json  randwrite-2-16.json  randwrite-2-2.json  randwrite-2-4.json  randwrite-32-1.json  randwrite-32-16.json  randwrite-32-2.json  randwrite-32-32.json  randwrite-32-4.json  randwrite-4-1.json  randwrite-4-16.json  (+10 more)
HPDL380G8-H420i-Crucial-MX200x3_RAID0/: randread-1-1.json  randread-1-2.json  randread-1-4.json  randread-1-8.json  randread-16-2.json  randread-16-4.json  randread-16-64.json  randread-2-1.json  randread-2-2.json  randread-2-4.json  randread-32-16.json  randread-32-2.json  randread-32-4.json  randread-32-64.json  randread-4-1.json  randread-4-16.json  randread-4-64.json  (+28 more)
(+4475 files in other folders)
